--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_HOST="mongodb+srv://logvina_0902:Logvina0902@cluster0.vkz7f.mongodb.net/db-co
 DB_USER="logvina_0902"
 DB_PASS="Logvina0902"
 DB_NAME="db-contacts"
+SECRET_KEY=jghdfgvGfhdfgf
