--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_USER="logvina_0902"
 DB_PASS="Logvina0902"
 DB_NAME="db-contacts"
 SECRET_KEY=jghdfgvGfhdfgf
+SENDGRID_API_KEY='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'
